syntax = "proto3";

package chalk.engine.v1;

import "chalk/auth/v1/permissions.proto";
import "chalk/common/v1/online_query.proto";

message PingRequest {
  int32 num = 1;
}

message PingResponse {
  int32 num = 1;
}

service QueryService {
  rpc Ping(PingRequest) returns (PingResponse) {}

  rpc OnlineQuery(chalk.common.v1.OnlineQueryRequest) returns (chalk.common.v1.OnlineQueryResponse) {
    option (chalk.auth.v1.permission) = PERMISSION_QUERY_ONLINE;
  }

  rpc OnlineQueryBulk(chalk.common.v1.OnlineQueryBulkRequest) returns (chalk.common.v1.OnlineQueryBulkResponse) {
    option (chalk.auth.v1.permission) = PERMISSION_QUERY_ONLINE;
  }

  rpc OnlineQueryMulti(chalk.common.v1.OnlineQueryMultiRequest) returns (chalk.common.v1.OnlineQueryMultiResponse) {
    option (chalk.auth.v1.permission) = PERMISSION_QUERY_ONLINE;
  }

  rpc UploadFeaturesBulk(chalk.common.v1.UploadFeaturesBulkRequest) returns (chalk.common.v1.UploadFeaturesBulkResponse) {
    option (chalk.auth.v1.permission) = PERMISSION_QUERY_ONLINE;
  }
}
